Fixed issue where the "close nav" button disappeared behind the mobile nav. Also made the open/close button bigger.

--- a/asset/sass/_desktop.scss
+++ b/asset/sass/_desktop.scss
@@ -377,6 +377,7 @@ header nav {
     background-color:#192947;
 
     ul {
+        top:0;
         a {
             color: white !important
         }
