--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -211,20 +211,16 @@ header nav:before {
     font-family: "Font Awesome 5 Free";
     content: "\f0c9";
     display: block;
-    width: 1.25 * $spacing-l;
-    height: 1.25 * $spacing-l;
+    width: 1.5 * $spacing-l;
+    height: 1.5 * $spacing-l;
     border: 1px solid $light;
     text-align: center;
     border-radius: 2px;
     position: absolute;
-    right: gutter();
+    right: 0;
     cursor: pointer;
-    line-height: 1.25 * $base-line-height;
+    line-height: 1.5 * $base-line-height;
     background-color:#E8E9EB;
-}
-
-header nav.open {
-    margin: $spacing-m 0 -1px;
 }
 
 header nav.open:before {
@@ -235,6 +231,7 @@ header nav ul {
     padding-left: 0;
     list-style: none;
     position: relative;
+    top:1.5 * $spacing-l;
     margin: 0 auto;
 
     a {
